paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c1/sample_004/target.compile.log
warning: value assigned to `i` is never read
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c1/sample_004/target.rs:27:17
   |
27 |     if !ok_mod!(i) {
   |                 ^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error[E0506]: cannot assign to `i` because it is borrowed
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c1/sample_004/target.rs:4:13
   |
 4 |             $x = $x;
   |             ^^^^ `i` is assigned to here but it was already borrowed
...
25 |     let p = &mut i;
   |             ------ `i` is borrowed here
26 |
27 |     if !ok_mod!(i) {
   |         ---------- in this macro invocation
...
30 |     if !ok_mod!(*p) {
   |                 -- borrow later used here
   |
   = note: this error originates in the macro `ok_mod` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0503]: cannot use `i` because it was mutably borrowed
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c1/sample_004/target.rs:27:17
   |
25 |     let p = &mut i;
   |             ------ `i` is borrowed here
26 |
27 |     if !ok_mod!(i) {
   |                 ^ use of borrowed `i`
...
30 |     if !ok_mod!(*p) {
   |                 -- borrow later used here

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0503, E0506.
For more information about an error, try `rustc --explain E0503`.